# translation-server

./: .gitignore  _bergamot.pyi  cli.py  pyproject.toml  server.py  test.py
bergamot/: README.md  __init__.py  repository.py
