[tool.poetry]
name = "translation-server"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
#fastapi = "^0.115.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
requests = "^2.32.3"
appdirs = "^1.4.4"
fast-langdetect = "^0.2.2"
gunicorn = "^23.0.0"
setproctitle = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
